# AI-Agent

./: .gitignore  Dockerfile  app.py  call_function.py  config.py  main.py  memory.py  os_info.txt  prompts.py  pyproject.toml  reviewer.py  security.py  test_get_file_content.py  test_run_python_file.py
calculator/: main.py  tests.py
functions/: get_file_content.py  get_files_info.py  install_package.py  run_python_file.py  search_web.py  security_utils.py  task_manager.py  write_file.py
tests/: test_get_files_info.py
